# atomlgfx

./: .formatter.exs  .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml  mix.exs
.github/workflows/: docs-protocol-check.yml  repo-checks.yml
docs/: ARCHITECTURE.md  LGFX_PORT_PROTOCOL.md  MVP_PLAN.md  WORKER_MODEL.md  architecture.md  elixir-package.md  esp-idf-component.md  protocol-reference.md  protocol.md
examples/elixir/: mix.exs
examples/elixir/config/: config.exs
examples/elixir/lib/: lgfx_port.ex  sample_app.ex
examples/elixir/lib/lgfx_port/: cache.ex  device.ex  errors.ex  guards.ex  primitives.ex  protocol.ex  sprites.ex  text.ex
examples/elixir/lib/sample_app/: assets.ex  atomvm_compat.ex  clip_smoke.ex  color_smoke.ex  draw_string_stress.ex  font_probe.ex  jpg_smoke.ex  moving_icons.ex  port.ex  protocol_smoke.ex  push_image_stress.ex  shape_smoke.ex  sprite_protocol_smoke.ex  text_probe.ex  text_smoke.ex  touch_calibrate.ex  touch_probe.ex  write_session_smoke.ex
examples/elixir/priv/assets/icons/: README.md
include/lgfx_port/: lgfx_port.h  lgfx_port_config.h.in  ops.def  ops.h  proto_term.h  validate.h  worker.h
lgfx_device/: README.md  clip.cpp  control.cpp  images.cpp  lgfx_device.h  lgfx_device_control.cpp  lgfx_device_images.cpp  lgfx_device_internal.hpp  lgfx_device_sprites.cpp  lgfx_device_text.cpp  primitives.cpp  sprites.cpp  state.cpp  text.cpp
lgfx_port/: README.md  lgfx_port.c  lgfx_worker.c  lgfx_worker_core.c  lgfx_worker_device.c  lgfx_worker_mailbox.c  proto_term.c  validate.c  worker_core.c  worker_device.c  worker_internal.h
lgfx_port/cmake/: lgfx_port_config.h.in
lgfx_port/handlers/: clip.c  control.c  device.c  images.c  primitives.c  setup.c  sprites.c  text.c  touch.c
lgfx_port/include_internal/lgfx_port/: handler_decode.h  lgfx_port_internal.h  ops.def  ops.h  proto_term.h  protocol.h  validate.h  worker.h  worker_internal.h  worker_jobs.def  worker_jobs.h
lib/: atom_lgfx.ex  lgfx_port.ex
lib/atom_lgfx/: cache.ex  clip.ex  color.ex  device.ex  errors.ex  guards.ex  images.ex  open_config.ex  primitives.ex  protocol.ex  sprites.ex  text.ex  touch.ex
lib/lgfx_port/: cache.ex  clip.ex  device.ex  errors.ex  guards.ex  images.ex  open_config.ex  primitives.ex  protocol.ex  sprites.ex  text.ex  touch.ex
ports/: dispatch_table.c  lgfx_atoms.c  lgfx_port.c  lgfx_worker.c  op_meta.c  proto_caps.c  proto_term_decode.c  proto_term_encode.c
ports/handlers/: control.c  images.c  primitives.c  setup.c  sprites.c  text.c  touch.c
ports/include/: lgfx_port.h
ports/include/lgfx_port/: caps.h  color.h  dispatch_table.h  errors.h  esp_err_map.h  font_preset.h  handler_common.h  lgfx_port.h  op_handlers.h  op_meta.h  ops.def  ops_enum.h  proto_caps.h  reply_common.h  term_conv.h  term_decode.h  term_encode.h  validate.h  worker.h
ports/include/lgfx_port/handlers/: control.h  images.h  primitives.h  setup.h  sprites.h  text.h  touch.h
scripts/: atomvm-esp32.sh  atomvm_esp32.exs  build_release_image.exs  sync_lgfx_protocol_doc.exs
src/: lgfx_device.cpp  lgfx_device.h  lgfx_device_api.cpp  lgfx_device_caps.cpp  lgfx_device_clip.cpp  lgfx_device_control.cpp  lgfx_device_draw.cpp  lgfx_device_images.cpp  lgfx_device_internal.hpp  lgfx_device_primitives.cpp  lgfx_device_size.cpp  lgfx_device_sprites.cpp  lgfx_device_state.cpp  lgfx_device_text.cpp  lgfx_device_touch.cpp  lgfx_device_transactions.cpp
